--- a/src/app/assets/scss/style.scss
+++ b/src/app/assets/scss/style.scss
@@ -7,18 +7,20 @@
 //======================= Переменные и миксины =======================
 //========= Светлая тема =========
 html[data-theme="light"] {
-  --bg-body: #f8fafd;
-  --bg-block: #ffffff;
-  --shadow: 0px 0px 50px rgba(0, 0, 0, 0.25);
-  --font-color: #000000;
+	--bg-body: #f8fafd;
+	--bg-block: #ffffff;
+	--shadow: 0px 0px 50px rgba(0, 0, 0, 0.25);
+	--font-color: #000000;
+	--input-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
 //========= Темная тема =========
 html[data-theme="dark"] {
-  --bg-body: #17171a;
-  --bg-block: #323546;
-  --shadow: 0px 0px 50px rgba(255, 255, 255, 0.25);
-  --font-color: #ffffff;
+	--bg-body: #17171a;
+	--bg-block: #323546;
+	--shadow: 0px 0px 50px rgba(255, 255, 255, 0.25);
+	--font-color: #ffffff;
+	--input-shadow: inset 0px 0px 5px 5px rgba(255, 255, 255, 0.25);
 }
 
 //========= Общее =========
@@ -29,337 +31,597 @@ $btn-hover: inset 0px 5px 10px rgba(0, 0, 0, 0.4);
 $light-grey: #808a9d;
 
 @mixin button($fz) {
-  border-radius: 10px;
+	border-radius: 10px;
 
-  color: #ffffff;
-  font-size: $fz;
+	color: #ffffff;
+	font-size: $fz;
 
-  background-color: $blue;
+	background-color: $blue;
 }
 
 @mixin block($bgcolor, $bdrad, $boxshad, $stroke) {
-  background-color: $bgcolor;
+	background-color: $bgcolor;
 
-  border-radius: $bdrad;
-  border: $stroke;
+	border-radius: $bdrad;
+	border: $stroke;
 
-  box-shadow: $boxshad;
+	box-shadow: $boxshad;
 }
+
 //=================================================================
 
 //======================= Общие стили =======================
 body {
-  background-color: var(--bg-body);
+	background-color: var(--bg-body);
 
-  color: var(--font-color);
-  font-family: "Comfortaa", cursive;
+	color: var(--font-color);
+	font-family: "Comfortaa", cursive;
 
-  transition: all 0.2s;
+	transition: all 0.2s;
 }
 
 .container {
-  max-width: 1420px;
+	max-width: 1420px;
 
-  margin: 0 auto;
-  padding: 0 10px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+
+.pagination {
+	align-self: center;
+
+	button {
+		background-color: rgba(0, 0, 0, 0);
+
+		color: $light-grey;
+		font-size: 1.5rem;
+
+		transition: 0.3s;
+
+		margin: 0 7px 0 0;
+
+		&:last-child {
+			margin: 0;
+		}
+	}
+
+	.active {
+		text-decoration: underline;
+		color: #ffffff;
+	}
 }
 
 //======================= Header =======================
 header {
-  background-color: var(--bg-block);
+	background-color: var(--bg-block);
 
-  padding: 15px 0;
+	padding: 15px 0;
+	margin: 0 0 50px;
 
-  font-weight: 600;
-  font-size: 1.5rem;
-  a {
-    color: var(--font-color);
-    transition: all 0.2s;
+	font-weight: 600;
+	font-size: 1.5rem;
 
-    &:hover {
-      color: $blue;
-    }
-  }
+	a {
+		color: var(--font-color);
+		transition: all 0.2s;
 
-  svg * {
-    stroke: var(--font-color);
+		&:hover {
+			color: $blue;
+		}
+	}
 
-    transition: color 0.2s linear;
-  }
+	svg * {
+		stroke: var(--font-color);
+
+		transition: color 0.2s linear;
+	}
 }
 
 .menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 
-  // .menu__item-box
-  &__item-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex: 1 0 auto;
-    &_left {
-      max-width: 320px;
-    }
-    &_right {
-      max-width: 250px;
-      position: relative;
-      &::before {
-        content: "";
-        position: absolute;
-        left: 55px;
-        width: 2px;
-        height: 45px;
-        background-color: var(--font-color);
-      }
-    }
-    svg {
-      cursor: pointer;
-    }
-  }
+	// .menu__item-box
+	&__item-box {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex: 1 0 auto;
 
-  // .menu__item
-  &__item {
-    a {
-      display: flex;
-      align-items: center;
-      svg {
-        margin: 0 0 0 8px;
-      }
-    }
-  }
+		&_left {
+			max-width: 320px;
+		}
+
+		&_right {
+			max-width: 250px;
+			position: relative;
+
+			&::before {
+				content: "";
+				position: absolute;
+				left: 55px;
+				width: 2px;
+				height: 45px;
+				background-color: var(--font-color);
+			}
+		}
+
+		svg {
+			cursor: pointer;
+		}
+
+		button {
+			background-color: rgba(0, 0, 0, 0);
+		}
+	}
+
+	// .menu__item
+	&__item {
+		display: flex;
+		align-items: center;
+
+		svg {
+			margin: 0 0 0 8px;
+		}
+
+		&.active {
+			color: $blue;
+		}
+	}
 }
 
 //======================= Main =======================
 .stats {
-  padding: 80px 0 0;
 
-  // .stats__mini
-  &__mini {
-    display: flex;
+	// .stats__mini
+	&__mini {
+		display: flex;
 
-    margin: 0 -30px 80px;
-  }
+		margin: 0 -30px 80px;
+	}
 
-  &__column {
-    flex: 0 1 33.3%;
+	&__column {
+		flex: 0 1 33.3%;
 
-    padding: 0 30px;
-  }
+		padding: 0 30px;
+	}
 
-  // .stats__item
-  &__item {
-    min-height: 245px;
-  }
+	// .stats__item
+	&__item {
+		min-height: 245px;
+	}
 
-  // .stats__detailed
-  &__detailed {
-  }
+	// .stats__detailed
+	&__detailed {}
 }
 
 .recent-stats {
-  padding: 20px 30px;
-  @include block(var(--bg-block), 30px, var(--shadow), none);
+	padding: 20px 30px;
+	@include block(var(--bg-block), 30px, var(--shadow), none);
 
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 
-  // .recent-stats__label
-  &__label {
-    font-size: 1.375rem;
-    font-weight: 500;
-    line-height: 2.25rem;
+	// .recent-stats__label
+	&__label {
+		font-size: 1.375rem;
+		font-weight: 500;
+		line-height: 2.25rem;
 
-    margin: 0 0 25px;
+		margin: 0 0 25px;
 
-    display: flex;
-    align-items: center;
-    svg {
-      margin: 0 0 0 10px;
-    }
-  }
+		display: flex;
+		align-items: center;
 
-  // .recent-stats__content
-  &__content {
-    position: relative;
+		svg {
+			margin: 0 0 0 10px;
+		}
+	}
 
-    flex: 1 0 auto;
+	// .recent-stats__content
+	&__content {
+		position: relative;
 
-    &::after {
-      content: "...";
+		flex: 1 0 auto;
 
-      position: absolute;
-      bottom: 19px;
-      right: 0;
-    }
-  }
+		&::after {
+			content: "...";
 
-  // .recent-stats__row
-  &__row {
-    display: grid;
-    grid-template-columns: 1fr 1fr 90px;
-    column-gap: 8px;
+			position: absolute;
+			bottom: 19px;
+			right: 0;
+		}
+	}
 
-    align-items: end;
+	// .recent-stats__row
+	&__row {
+		display: grid;
+		grid-template-columns: 1fr 1fr 90px;
+		column-gap: 8px;
 
-    margin: 0 0 15px;
-  }
+		align-items: end;
 
-  // .recent-stats__category
-  &__category {
-    font-size: 1.125rem;
-  }
+		margin: 0 0 15px;
+	}
 
-  // .recent-stats__subcat
-  &__subcat {
-    color: $light-grey;
-    font-size: 0.875rem;
-  }
+	// .recent-stats__category
+	&__category {
+		font-size: 1.125rem;
+	}
 
-  // .recent-stats__sum
-  &__sum {
-    font-size: 1.125rem;
+	// .recent-stats__subcat
+	&__subcat {
+		color: $light-grey;
+		font-size: 0.875rem;
+	}
 
-    justify-self: end;
-  }
+	// .recent-stats__sum
+	&__sum {
+		font-size: 1.125rem;
 
-  // .recent-stats__total
-  &__total {
-    font-size: 1.125rem;
-    line-height: 20px;
+		justify-self: end;
+	}
 
-    display: flex;
-    justify-content: space-between;
-  }
+	// .recent-stats__total
+	&__total {
+		font-size: 1.125rem;
+		line-height: 20px;
 
-  svg * {
-    stroke: var(--font-color);
+		display: flex;
+		justify-content: space-between;
+	}
 
-    transition: 0.2s linear;
-  }
+	svg * {
+		stroke: var(--font-color);
+
+		transition: 0.2s linear;
+	}
 }
 
 .period-stats {
-  @include block(var(--bg-block), 30px, var(--shadow), 1px solid $blue);
-  border-top: none;
+	@include block(var(--bg-block), 30px, var(--shadow), 1px solid $blue);
+	border-top: none;
 
-  overflow: hidden;
+	overflow: hidden;
 
-  // .period-stats__header
-  &__header {
-    color: #ffffff;
+	// .period-stats__header
+	&__header {
+		color: #ffffff;
 
-    background-color: $blue;
+		background-color: $blue;
 
-    padding: 0 30px;
+		padding: 0 30px;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 
-    button {
-      background-color: rgba(0, 0, 0, 0);
-      transition: all 0.3s ease;
-    }
-    svg,
-    select {
-      cursor: pointer;
-    }
-  }
+		button {
+			background-color: rgba(0, 0, 0, 0);
+			transition: all 0.3s ease;
+		}
 
-  // .period-stats__tab
-  &__tab {
-    font-size: 1.375rem;
-    font-weight: 500;
-    color: inherit;
+		svg,
+		select {
+			cursor: pointer;
+		}
+	}
 
-    padding: 12px 25px;
-    &.active {
-      box-shadow: $btn-hover;
-    }
-  }
+	// .period-stats__tab
+	&__tab {
+		font-size: 1.375rem;
+		font-weight: 500;
+		color: inherit;
 
-  // .period-stats__settings
-  &__settings {
-    display: flex;
-    align-items: center;
-  }
+		padding: 12px 25px;
 
-  // .period-stats__period
-  &__period {
-    padding: 3px 6px;
-    margin: 0 15px 0 0;
+		&.active {
+			box-shadow: $btn-hover;
+		}
+	}
 
-    font-family: inherit;
-    color: inherit;
-    font-size: 1.125rem;
-    font-weight: 600;
+	// .period-stats__settings
+	&__settings {
+		display: flex;
+		align-items: center;
+	}
 
-    background-color: rgba(0, 0, 0, 0);
+	// .period-stats__period
+	&__period {
+		padding: 3px 6px;
+		margin: 0 15px 0 0;
 
-    border: 2px solid #ffffff;
-    border-radius: 10px;
+		font-family: inherit;
+		color: inherit;
+		font-size: 1.125rem;
+		font-weight: 600;
 
-    appearance: none;
+		background-color: rgba(0, 0, 0, 0);
 
-    background-image: url("../img/svg/select.svg");
-    background-repeat: no-repeat;
-    background-position: 95% 54%;
+		border: 2px solid #ffffff;
+		border-radius: 10px;
 
-    option {
-      background-color: $blue;
-    }
-  }
+		appearance: none;
 
-  // .period-stats__content
-  &__content {
-    display: flex;
-    justify-content: space-between;
+		background-image: url("../img/svg/select.svg");
+		background-repeat: no-repeat;
+		background-position: 95% 54%;
 
-    padding: 15px 30px;
-  }
+		option {
+			background-color: $blue;
+		}
+	}
 
-  // .period-stats__chart
-  &__chart {
-    width: 200px;
-  }
+	// .period-stats__content
+	&__content {
+		display: flex;
+		justify-content: space-between;
 
-  // .period-stats__period-info
-  &__period-info {
-  }
+		padding: 15px 30px;
+	}
 
-  // .period-stats__total
-  &__total {
-    align-self: flex-end;
+	// .period-stats__chart
+	&__chart {
+		width: 200px;
+	}
 
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: $green;
+	// .period-stats__period-info
+	&__period-info {}
 
-    margin: 0 0 15px;
-  }
+	// .period-stats__total
+	&__total {
+		align-self: flex-end;
+
+		font-size: 1.5rem;
+		font-weight: 700;
+		color: $green;
+
+		margin: 0 0 15px;
+	}
 }
 
 .period-info {
-  // .period-info__title
-  &__title {
-    margin: 0 0 15px;
 
-    font-size: 1.25rem;
-    font-weight: 500;
-  }
+	// .period-info__title
+	&__title {
+		margin: 0 0 15px;
 
-  // .period-info__list
-  &__list {
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    grid-auto-flow: column;
-    row-gap: 10px;
-  }
+		font-size: 1.25rem;
+		font-weight: 500;
+	}
 
-  // .period-info__item
-  &__item {
-    font-weight: 500;
-  }
+	// .period-info__list
+	&__list {
+		display: grid;
+		grid-template-rows: repeat(6, 1fr);
+		grid-auto-flow: column;
+		row-gap: 10px;
+	}
+
+	// .period-info__item
+	&__item {
+		font-weight: 500;
+	}
+}
+
+//======================= User =======================
+.user {
+	color: var(--font-color);
+
+	// .user__container
+	&__container {
+		@include block(var(--bg-block), 30px, var(--shadow), none);
+
+		max-width: 700px;
+		height: 600px;
+
+		margin: 0 auto;
+		padding: 30px 50px;
+
+		display: flex;
+		flex-direction: column;
+	}
+
+	// .user__navigation
+	&__navigation {
+		font-weight: 600;
+		font-size: 1.5rem;
+
+		margin: 0 25px 35px;
+
+		background-color: $blue;
+
+		border-radius: 10px;
+
+		display: flex;
+		justify-content: stretch;
+
+		overflow: hidden;
+
+		a {
+			color: #ffffff;
+
+			padding: 11px 0;
+
+			flex: 1 0 auto;
+
+			text-align: center;
+
+			&.active {
+				box-shadow: $btn-hover;
+
+				max-width: 100%;
+			}
+		}
+	}
+
+	// .user__content
+	&__content {
+		flex: 1 0 auto;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+
+	// .user__form
+	&__form {}
+
+	// .user__pagination
+	&__pagination {
+		margin: 0 0 15px;
+	}
+
+	// .user__bottom
+	&__bottom {
+		align-self: flex-end;
+
+		display: flex;
+		justify-content: flex-end;
+		align-items: flex-end;
+
+		width: 100%;
+
+		button {
+			margin: 0 auto 0 0;
+
+
+			display: flex;
+			align-items: center;
+
+			background-color: $blue;
+
+			color: #ffffff;
+			font-size: 1.125rem;
+			font-weight: 600;
+
+			border-radius: 10px;
+
+			svg {
+				margin: 0 0 0 19px;
+			}
+
+			&.add {
+				padding: 8px 10px 8px 24px;
+			}
+
+			&.cancel {
+				padding: 8px 24px;
+			}
+		}
+	}
+
+	// .user__accounts
+	&__accounts {
+		flex: 1 0 auto;
+	}
+
+	// .user__accounts-item
+	&__accounts-item {
+		margin: 0 0 20px;
+	}
+
+	// .user__total
+	&__total {
+		font-size: 2rem;
+		font-weight: 700;
+
+		.positive {
+			color: $green;
+		}
+
+		.negative {
+			color: $red;
+		}
+	}
+}
+
+.user-form {
+	font-weight: 600;
+	font-size: 1.5rem;
+
+	// .user-form__label
+	&__label {
+		display: flex;
+		justify-content: space-between;
+
+		margin: 0 0 10px;
+	}
+
+	// .user-form__input-row
+	&__input-row {
+		display: flex;
+		justify-content: space-between;
+
+		margin: 0 0 50px;
+
+		input {
+			flex: 1 0 auto;
+
+			padding: 10px;
+			margin: 0 28px 0 0;
+
+			background-color: var(--bg-body);
+
+			border-radius: 10px;
+			border: 1px solid $blue;
+
+			font-size: inherit;
+			font-weight: inherit;
+			color: inherit;
+
+			transition: box-shadow 0.2s linear;
+
+			&:focus {
+				box-shadow: var(--input-shadow);
+			}
+		}
+	}
+
+	button {
+		color: #ffffff;
+		font-weight: inherit;
+		font-size: inherit;
+
+		background-color: $blue;
+
+		border-radius: 10px;
+
+		padding: 9px 30px;
+
+		&:is(:active, :focus) {
+			box-shadow: var(--input-shadow);
+		}
+	}
+}
+
+.accounts-item {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	padding: 18px;
+
+	border-radius: 10px;
+	border: 1px solid $blue;
+
+	font-weight: 500;
+	font-size: 22px;
+
+	// .accounts-item__label
+	&__label {
+		flex-basis: 215px;
+
+		margin: 0 50px 0 0;
+	}
+
+	// .accounts-item__sum
+	&__sum {
+		flex: 1 0 auto;
+	}
+
+	button {
+		background-color: rgba(0, 0, 0, 0);
+	}
 }
